# RayTracer-Weekend

./: .gitignore  Cargo.toml  README.md  a.ipynb  clippy.toml  proof.typ  render.py  sym.ipynb
config/: camera.toml  materials.toml  scene.toml  tracer.toml
config/blurred/: materials.toml  new_scene.toml  scene.toml  tracer.toml
config/cornell/: camera.toml  materials.toml  scene.toml  tracer.toml
config/dark/: camera.toml  materials.toml  scene.toml  tracer.toml
config/lens/: camera.toml  mat2.toml  materials.toml  scene.toml  tracer.toml
config/litup/: camera.toml  materials.toml  scene.toml  tracer.toml
crates/driver/: Cargo.toml
crates/driver/src/: blurred.rs  debug.rs  iter.rs  main.rs
crates/generate/: Cargo.toml
crates/generate/src/: material.rs
crates/py-raytrace/: Cargo.toml  pyproject.toml
crates/py-raytrace/src/: lib.rs  tracer.rs
crates/tracer/: Cargo.toml
crates/tracer/src/: main.rs
crates/tracer/src/camera/: camera.rs  camera_lens.rs  image_space.rs  mod.rs
crates/tracer/src/config/: materials.rs  scene.rs  toml_common.rs
crates/tracer/src/entity/: animated_scene.rs  backgrounds.rs  mod.rs  motion_scene.rs  scene.rs  traits.rs
crates/tracer/src/entity/analytic/: box_.rs  commons.rs  mod.rs  parallelogram.rs  plane.rs  smoke_sphere.rs  somke_box.rs  sphere.rs  triangle.rs
crates/tracer/src/helpers/: constants.rs  types.rs
crates/tracer/src/materials/: errors.rs  material.rs  mod.rs
crates/tracer/src/math/: angles.rs  distributions.rs  mod.rs  panics.rs  ray.rs
crates/tracer/src/tracer/: mod.rs
src/: lib.rs  main.rs  test.rs
src/camera/: camera.rs  camera_lens.rs  image_space.rs  mod.rs
src/config/: errors.rs  materials.rs  mod.rs
src/entity/: mod.rs  scene.rs  traits.rs
src/entity/analytic/: sphere.rs
src/helpers/: constants.rs  mod.rs  traits.rs  types.rs
src/materials/: material.rs
src/math/: distributions.rs  interval.rs  mod.rs  panics.rs  ray.rs  sphere.rs  sphere_distribution.rs
src/tracer/: mod.rs
src/tracer/ray/: hit.rs  ray.rs
src/tracer/tracers/: mod.rs  tracer_lambert.rs  tracer_lens.rs  tracer_mat.rs
src/tracer/versions/: mod.rs  tracer_aa.rs  tracer_simple.rs
(+9 files in other folders)
