[package]
name = "raytrace"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "raytrace-run"
path = "src/main.rs"

[dependencies]
nalgebra-glm = "0.19.0"
nalgebra = "0.33.2"
rand = "0.8.5"
rand_distr = "0.4.3"
image = { version = "0.25.5", features = ["rayon"] }
rayon = "1.10.0"
itertools = "0.13.0"
indicatif = { version = "0.17.9", features = ["rayon"] }
