[package]
name = "generate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen_mat"
path = "src/material.rs"

[dependencies]
nalgebra-glm = "0.19.0"
nalgebra = { version = "0.33.2", features = ["serde", "serde-serialize"] }
rand = "0.8.5"
rand_distr = "0.4.3"
image = { version = "0.25.5", features = ["rayon"] }
itertools = "0.13.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
anyhow = "1.0.93"
raytrace = { path = "../tracer" }
