[package]
name = "py-raytrace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_raytrace"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.1"
raytrace = { path = "../tracer" }
anyhow = "1.0.93"
thiserror = "2.0.3"
nalgebra-glm = "0.19.0"
nalgebra = "0.33.2"
indicatif = { version = "0.17.9", features = ["rayon"] }
rayon = "1.10.0"
image = { version = "0.25.5", features = ["rayon"] }
rand = "0.8.5"
rand_distr = "0.4.3"
